@@ -98,3 +98,4 @@ Thanks to the following, who submitted detailed bug reports and excellent sugges
   sclee15
   varac
   xerus2000
+  Rafael Oliveira
